feat: removed fake data

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <img src="../public/images/android-chrome-192x192.png" alt="">
-    <h3>Welcome to the Collaboration App</h3>
+    <h3>Welcome to the Job Tracker App</h3>
     </main>
 
     <script src="/src/public/js/scripts.js"></script>
